--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.2.2",
+    "bootstrap": "^5.3.3",
     "chart.js": "^4.0.1",
     "formik": "^2.2.9",
     "nanoid": "^5.0.7",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.10.2",
     "react-chartjs-2": "^5.0.1",
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
